Fix/Share modal overlapping

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -26,6 +26,17 @@ html::-webkit-scrollbar {
   }
 }
 
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 @layer components {
   .btn {
     @apply px-4 py-2 text-center transition duration-150 ease-in-out cursor-pointer select-none rounded-md font-semibold;
